# OdyCSUnmuter

./: .gitignore  Build-and-Run-OdyCSUnmuter.bat  CHANGELOG.md  CONTRIBUTING.md  CS2-CONSOLE-COMMANDS.txt  Cargo.toml  PUBLISHING.md  README.md  RELEASE_NOTES.md  Run-OdyCSUnmuter.bat  SECURITY.md  THIRD_PARTY_NOTICES.md  main.rs  prepare-faceit-parser.ps1
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: windows-release.yml
release/: README.txt  Run-OdyCSUnmuter.bat
scripts/: package-release.ps1
